objects/Service_Report__c.object
<CustomObject>
    <description>Used to report on missing service reports</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>The date of the service report</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Work_Order__r.Owner:User.FirstName + &apos; &apos; + Work_Order__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Link__c</fullName>
        <description>The link to the attached pdf on the work order</description>
        <inlineHelpText>The link to the attached pdf on the work order</inlineHelpText>
        <label>PDF Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <formula>Work_Order__r.SVMXC__Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Report_Finalized__c</fullName>
        <formula>Work_Order__r.Service_Report_Finalized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Report Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Report_Received__c</fullName>
        <formula>Work_Order__r.Service_Report_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Report Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Work_Order__r.SVMXC__Order_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Center__c</fullName>
        <formula>Work_Order__r.Super_Center__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The work order</description>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Service Reports</relationshipLabel>
        <relationshipName>Service_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Report</label>
    <nameField>
        <displayFormat>SR-{0000000}</displayFormat>
        <label>Service Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>